--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/build/linux/x86_64/debug/autowaybar",
             "args": [
-                "-m", "mon:LOL"
+                "-m", "focused"
             ],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
