chore: Clean up repository and improve .gitignore
- Remove build artifacts and package files from repository
- Update .gitignore to properly exclude build outputs
- Add PKGBUILD and .SRCINFO for Arch Linux packaging
- Keep only source code and essential files in repository
- Follow standard C++ project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+# Build artifacts
 /.xmake
 /build
+/pkg
+
+# Package files
+*.pkg.tar.zst
+*.pkg.tar.xz
+*.pkg.tar.gz
+*.tar.gz
+*.tar.xz
+
+# Compiled binaries
+autowaybar
+autowaybar-ai
+
+# IDE files
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.log
